Test/errors/err_temp_field_store.cb
// Storing an owning field extracted from a NON-move (alias) by-value temp into a longer-lived slot
// must be rejected: a plain accessor's temp does not own the field buffer, so a shallow copy into a
// second owner double-frees at teardown. The fix is '.copy()'. A `move`-return temp instead does an
// implied move (the temp owns the field) - see test_collection_leaks.cb. See internal/issue/misc-known-gaps.md.
struct Tok { string text = default; };
struct Box { string slot = default; };

Tok aliasTok() { Tok t = default; t.text = "x" + "y"; return t; }

extern int main()
{
    expect_error("taken from a temporary");
    Box b = default;
    b.slot = aliasTok().text;       // REJECTED - non-move temp, use aliasTok().text.copy()
}
